# schedule-maker

./: .gitignore  pyproject.toml
src/: builder.py  main.py  models.py  utils.py
src/writers/: csv_writer.py  ics_writer.py  xls_writer.py
